--- a/history.txt
+++ b/history.txt
@@ -1,46 +1,1 @@
-neato!
-htop
-htop
-tar
-tar
-tar --xzf htop-3.1.1.tar.gz 
-tar --help
-tar -xvzf htop-3.1.1.tar.gz 
-cd htop-3.1.1
-ls
-make
-rm -rf htop-3.1.1/
-git clone https://github.com/htop-dev/htop
-cd htop
-ls
-make
-./autogen.sh
-bash autogen.sh && ./configure && make
-apt install autoreconf
-pd
-ps
-ps aux | grep bundle
-bundle | ps
-bundle | ps
-pwd
-pwd
-$PATH
-cat $PATH
-pidof
-pidof bundle
-pidof ruby
-bundle | pidof bundle
-pidof bundle | bundle
-./.bundle
-ps aux | grep bundle
-ps aux
-ps aux | grep all
-ps aux | grep nix
-ps
-ps
-ps
-sps
-ssps
-ssps
-sps
-fksdofksodfsd
+History? More like... BROWSER HISTORY-
