mango interval, skip 30 seconds to watch video

--- a/history.txt
+++ b/history.txt
@@ -35,3 +35,71 @@ kljkjklj
 
 
 clear
+Among US?
+Among
+AMONG US
+Among us?
+clear
+puts
+clear
+irb
+sdfsdfsdf
+Among us?
+SUS
+SUS
+clear
+retry
+/
+\
+\
+\
+\
+\
+`
+1
+1
+1
+~
+/
+~?
+/?
+?
+.
+dcsjiudvjdvs
+fv
+f
+f
+;i
+l;
+iu;uiku
+kuku
+ktuko
+gj59y
+54y54y
+9
+9
+9
+.
+.
+.
+.
+/
+/
+/
+/.
+.
+.
+.
+.
+.
+.
+,
+,
+,
+,
+,
+Z
+irb
+irb
+irb
+irb
