Date and time commands, etc.

--- a/history.txt
+++ b/history.txt
@@ -134,3 +134,53 @@ beep
 beep
 beep
 beep
+the fitness gram pacer test is a multistage aerobatic capacity test that progressively fucks your mom
+the fitness gram pacer test is a multistage aerobatic capacity test that progressively gets more difficult as it continues
+inf
+inf
+inf
+inf
+inf
+info
+inf
+info
+info
+inf
+date
+date
+date
+date
+date
+time
+time
+time
+time
+date
+time
+time
+time
+time
+time
+time
+time
+time
+time
+date
+date
+time
+time
+date
+date
+time
+time
+time
+cls
+time
+date
+echo "cool"
+unixtime
+europedate
+europedate
+24hr
+24hr
+europedate
