--- a/history.txt
+++ b/history.txt
@@ -1,283 +1,10 @@
-History? More like... BROWSER HISTORY-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-kljkjklj
-
-
-
-
-
-
-
-
-
-
-
-
-clear
-Among US?
-Among
-AMONG US
-Among us?
-clear
-puts
-clear
-irb
-sdfsdfsdf
-Among us?
-SUS
-SUS
-clear
-retry
-/
-\
-\
-\
-\
-\
-`
-1
-1
-1
-~
-/
-~?
-/?
-?
-.
-dcsjiudvjdvs
-fv
-f
-f
-;i
-l;
-iu;uiku
-kuku
-ktuko
-gj59y
-54y54y
-9
-9
-9
-.
-.
-.
-.
-/
-/
-/
-/.
-.
-.
-.
-.
-.
-.
-,
-,
-,
-,
-,
-Z
-irb
-irb
-irb
-irb
-cd /
-clear
-bash lambda.sh
-bash lambda.sh
-cd ~
-cd Ruby-Shell-v131 R
-cd Ruby-Shell-v131
-cd /
-cd/
-cd /
-clear
-history
-history
-among us
-amongus
-clear
-amongus
-ls amongus
-lambda
-cls
-beeep
-beep
-beep
-beep
-beep
-lambda
-cls
-beep
-beep
-beep
-beep
-the fitness gram pacer test is a multistage aerobatic capacity test that progressively fucks your mom
-the fitness gram pacer test is a multistage aerobatic capacity test that progressively gets more difficult as it continues
-inf
-inf
-inf
-inf
-inf
-info
-inf
-info
-info
-inf
-date
-date
-date
-date
-date
-time
-time
-time
-time
-date
-time
-time
-time
-time
-time
-time
-time
-time
-time
-date
-date
-time
-time
-date
-date
-time
-time
-time
-cls
-time
-date
-echo "cool"
-unixtime
-europedate
-europedate
-24hr
-24hr
-europedate
-help
-help
-help
-help
-time
-thanksgiving
-thanksgiving
-thanksgiving
-thanksgiving
-thankgsiving
-thanksgiving
-thankgsiving
-thanksgiving
-help
-thanksgiving
-gem 
-cls
-beep
-hepl
-help
-tar -xcvz
-tar --xcvz
-tar --xvz
-tar 
-curl
-curl https://www.purebasic.com/download/purebasic-demo_x64.tar.gz
-curl https://www.purebasic.com/download/
-ls
-ls
-sls
-sls
-ls
-ls
-git clone https://www.purebasic.com/download/purebasic-demo_x64.tar.gz
-git clone https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-git clone https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-curl https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-git clone https://github.com/QB64Team/qb64
-cd qb64
-ls
-ls
-l
-ls
-ls
-cd internal
-ls
-cd c
-ls
-cd ..
-cd ..
-make
-cd internal 
-cd c
-make
-cd ~
-curl -LJQ https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-curl -LJQ https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-curl -LJO https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-tar qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz 
-tar -xf https://github.com/QB64Team/qb64/releases/download/v2.0.2/qb64_2021-11-07-02-59-19_4d85302_lnx.tar.gz
-;
-;
-calculator
-calc
-chmod +x calc
-chmod +x calc
-calc
-calc
-calc
-calc
-NUCLE198511
-help
-i3
-pkill
-pkill fluxbox
-pkill fluxbox
-pkill fluxbox
-pkill
-fdgdfg
-dh
-gf
-pkill i3
-fg
-pkill x
-i3
-pkill x
-i3
-pkill flu
-pkill fluxbox
-i4
-i3
-pkill i3
-pkill x
-pkill fluxbox
-i3
-time
-time
+# This is the list of every command you have ran in rsh.
+# Keep in mind this history.txt will only be usable 
+# during your current session, as you can not use 
+# previous commands if you restart the shell. 
+# Sorry about that!rps
+rps
+d
+d
+rps
+d
