--- a/history.txt
+++ b/history.txt
@@ -5,3 +5,19 @@
 # Sorry about that!
 cls
 help
+help
+a
+calc
+1 / 0
+calc
+print 1 / 0
+1 / 0
+echo
+echo 1 / 0
+echo 1/0
+printf
+printf 1 / 0
+printf 1/0
+printf 1/0
+cls
+cls
